--- a/app/templates/push/pushes.twig
+++ b/app/templates/push/pushes.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% set page_title = repo.key~" Push History" %}
+{% set page_title = repo.description ~ " Push History" %}
 
 {% block content %}
     <p><a class="btn--small btn--back" href="{{ urlFor('repository', {'id': repo.id}) }}">Back to Repository</a></p>
 
-    <h2>{{ repo.key }} Push History</h2>
+    <h2>Push History for <strong>{{ repo.description }}</strong></h2>
 
     {% include 'partials/push-table.twig' with {'pushes': pushes} %}
 
