--- a/app/templates/server/server.twig
+++ b/app/templates/server/server.twig
@@ -11,19 +11,33 @@
     <h3>Environment</h3>
     <p>{{ server.environment.key }}</p>
 
-    <h3>Repository deployments:</h3>
-    <ul>
-        {% for deployment in deployments %}
-            <li>
-                <span class="fixed-size-label">
-                    <a href="{{ urlFor('repository', {id: deployment.repository.id}) }}">{{ deployment.repository.key }}</a>
-                </span>
-                <code>{{ deployment.path }}</code>
-            </li>
-        {% else %}
-            <li>There are no deployments associated with this server.</li>
-        {% endfor %}
-    </ul>
+    <h3>Repository deployments</h3>
+    {% if deployments %}
+        <table class="tablesaw tablesaw-stack" data-mode="stack">
+            <thead>
+                <tr>
+                    <th>Repository</th>
+                    <th>Path</th>
+                    <th>URL</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for deployment in deployments %}
+                <tr>
+                    <td>
+                        <a href="{{ urlFor('repository', {id: deployment.repository.id}) }}">{{ deployment.repository.description }}</a>
+                    </td>
+                    <td><code>{{ deployment.path }}</code></td>
+                    <td>
+                        <a href="{{ deployment.url.asString()  }}">{{ deployment.url.asString()  }}</a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    {% else %}
+        <p>There are no deployments associated with this server.</p>
+    {% endif %}
 
     {% if isUserAdmin(currentUser) and deployments %}
         <p><strong>Note:</strong> All associated deployments must be removed or transferred to remove this server.</p>
