Add string/gitref hard slicing as twig filters

--- a/app/templates/partials/build-box.twig
+++ b/app/templates/partials/build-box.twig
@@ -26,10 +26,8 @@
                     <ul class="split mbn">
                         <li>
                             <span class="split__title">{{ build.created|reldate }}</span>
-                            <a href="{{ githubReference(build.repository.githubUser, build.repository.githubRepo, build.branch) }}">{{ build.branch|gitref }}</a>
-                            <svg viewBox="0 0 32 32" class="icon">
-                                <use xlink:href="#fork"></use>
-                            </svg>
+                            <a href="{{ githubReference(build.repository.githubUser, build.repository.githubRepo, build.branch) }}">{{ build.branch|sliceGitref }}</a>
+                            <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#fork"></use></svg>
                         </li>
                     </ul>
                 </section>
