--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -89,9 +89,7 @@
                         <a href="{{ githubReference(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.branch) }}">{{ push.build.branch|gitref }}</a> (behind or unresolved)
                     </span>
                 {% endif %}
-                <svg viewBox="0 0 32 32" class="icon">
-                    <use xlink:href="#fork"></use>
-                </svg>
+                <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#fork"></use></svg>
             </dd>
 
             <dt class="split--left__title">
@@ -99,11 +97,7 @@
             </dt>
             <dd class="split--left__value">
                 <a href="{{ githubCommit(push.build.repository.githubUser, push.build.repository.githubRepo, push.build.commit) }}">{{ push.build.commit|commit }}</a>
-                <span class="icon">
-                    <svg viewBox="0 0 32 32">
-                        <use xlink:href="#github"></use>
-                    </svg>
-                </span>
+                <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
             </dd>
         </dl>
     </div>
