--- a/public/views/queue.build.html
+++ b/public/views/queue.build.html
@@ -3,7 +3,7 @@
         <a href="{{ buildUrl }}">Build</a>
     </td>
     <td>
-        <a href="{{ repoUrl }}/status">{{ repoName }}</a>
+        <a href="{{ repoStatusUrl }}">{{ repoName }}</a>
     </td>
     <td>
         <span class="status-before--{{ buildStatusStyle }}" data-build="{{ buildId }}">{{  buildStatus }}</span>
@@ -11,11 +11,7 @@
     <td>{{ environmentName }}</td>
     <td>
         <a href="{{ referenceUrl }}">{{ reference }}</a>
-        <span class="icon">
-            <svg viewBox="0 0 32 32">
-                <use xlink:href="#github"></use>
-            </svg>
-        </span>
+        <svg class="icon" viewBox="0 0 32 32"><use xlink:href="#github"></use></svg>
     </td>
     <td>{{ initiator }}</td>
 </tr>
