--- a/public/views/queue.push.html
+++ b/public/views/queue.push.html
@@ -3,12 +3,14 @@
         <a href="{{ pushUrl }}">Push</a>
     </td>
     <td>
-        <a href="{{ repoUrl }}/status">{{ repoName }}</a>
+        <a href="{{ repoStatusUrl }}">{{ repoName }}</a>
     </td>
     <td>
         <span class="status-before--{{ pushStatusStyle }}" data-push="{{ pushId }}">{{  pushStatus }}</span>
     </td>
     <td>{{ environmentName }} → {{ serverName }}</td>
-    <td>Build <a href="{{ buildUrl }}">{{ buildId }}</a></td>
+    <td>
+        Build <a href="{{ buildUrl }}">{{ buildId }}</a>
+    </td>
     <td>{{ initiator }}</td>
 </tr>
