Remove pointer event from svg within btn

--- a/sass/partials/patterns/_buttons.scss
+++ b/sass/partials/patterns/_buttons.scss
@@ -68,6 +68,8 @@
     padding: 0 msem(-1);
 }
 
-.toggles {
-    float: right;
+/* Ensure that svg icons within buttons are clickable */
+.btn svg {
+    pointer-events: none;
 }
+
