Minor consistency updates to build/push labels

--- a/app/templates/push/push.twig
+++ b/app/templates/push/push.twig
@@ -52,7 +52,7 @@
     <div class="details-box">
         <dl class="split--left mbn">
             <dt class="split--left__title">
-                Build
+                Build Id
             </dt>
             <dd class="split--left__value">
                 <a href="{{ urlFor('build', {'build': push.build.id}) }}">{{ push.build.id|formatBuildId }}</a>
