--- a/app/templates/push/start.twig
+++ b/app/templates/push/start.twig
@@ -11,7 +11,7 @@
     <div class="details-box">
         <dl class="split--left mbn">
             <dt class="split--left__title">
-                Build ID
+                Build Id
             </dt>
             <dd class="split--left__value">
                 <a href="{{ urlFor('build', {build: build.id}) }}">{{ build.id|formatBuildId }}</a>
@@ -57,7 +57,7 @@
                 </span>
             </dd>
             <dt class="split--left__title">
-                Prepared By
+                Initiator
             </dt>
             <dd class="split--left__value">
                 {% if build.user %}
