Update queue for api changes

--- a/public/views/queue.push.html
+++ b/public/views/queue.push.html
@@ -10,7 +10,7 @@
     </td>
     <td>{{ environmentName }} → {{ serverName }}</td>
     <td>
-        Build <a href="{{ buildUrl }}">{{ buildId }}</a>
+        Build <a href="{{ buildUrl }}">{{ buildIdShort }}</a>
     </td>
     <td>{{ initiator }}</td>
 </tr>
