--- a/app/templates/queue.twig
+++ b/app/templates/queue.twig
@@ -3,7 +3,7 @@
 {% set page_title = "Queue" %}
 
 {% block content %}
-    <h2>Push and Build Queue</h2>
+    <h2>Build and Push Queue</h2>
 
     {% include 'partials/pending-table.twig' %}
 
