--- a/sass/partials/_cards.scss
+++ b/sass/partials/_cards.scss
@@ -73,33 +73,33 @@
     transform: rotate(-360deg);
 }
 
-/* env specific colors for push cards */
-.cards--test {
-    .card {
-        box-shadow: 0 0 0 8px $hal-blue;
-    }
-    .card__header {
-        background-color: $hal-blue;
-        a { color: $white }
-    }
+/* env specific colors for push cards and push/build boxes */
+.cards--test .card,
+.card--test {
+    box-shadow: 0 0 0 8px $hal-blue;
+}
+.cards--test .card__header,
+.card--test .card__header {
+    background-color: $hal-blue;
+    a { color: $white }
 }
 
-.cards--beta {
-    .card {
-        box-shadow: 0 0 0 8px $hal-cyan;
-    }
-    .card__header {
-        background-color: $hal-cyan;
-        a { color: $white }
-    }
+.cards--beta .card,
+.card--beta {
+    box-shadow: 0 0 0 8px $hal-cyan;
+}
+.cards--beta .card__header,
+.card--beta .card__header {
+    background-color: $hal-cyan;
+    a { color: $white }
 }
 
-.cards--prod {
-    .card {
-        box-shadow: 0 0 0 8px $hal-red;
-    }
-    .card__header {
-        background-color: $hal-red;
-        a { color: $white }
-    }
+.cards--prod .card,
+.card--prod {
+    box-shadow: 0 0 0 8px $hal-red;
+}
+.cards--prod .card__header,
+.card--prod .card__header {
+    background-color: $hal-red;
+    a { color: $white }
 }
